@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.6 2007/01/23 11:53:46 martti Exp $
-
-SHA1 (xfcalendar-4.2.4.tar.gz) = a5137ea65f142c07bdb9a3af0de62b2171230480
-RMD160 (xfcalendar-4.2.4.tar.gz) = 329004035122debd947c1ea591ed65338b6ab810
-Size (xfcalendar-4.2.4.tar.gz) = 481712 bytes
